--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "type": "sylius-plugin",
     "description": "Mondial Relay Shipping plugin for Sylius.",
     "license": "GPL-3.0-or-later",
-    "version": "1.3.0",
+    "version": "1.4.0",
     "require": {
         "php": "^7.2",
         "sylius/sylius": "~1.3",
         "bitbag/shipping-export-plugin": "^1.2",
-        "magentix/sylius-pickup-plugin": "^1.3.0"
+        "sylfrid/sylius-pickup-plugin": "dev-master"
     },
     "require-dev": {
         "phpspec/phpspec": "^5.0",
