--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^7.2",
         "sylius/sylius": "~1.3",
         "bitbag/shipping-export-plugin": "^1.2",
-        "sylfrid/sylius-pickup-plugin": "dev-master"
+        "sylfrid/sylius-pickup-plugin": "1.4.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^5.0",
