--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "type": "sylius-plugin",
     "description": "Mondial Relay Shipping plugin for Sylius.",
     "license": "GPL-3.0-or-later",
-    "version": "1.4.4",
+    "version": "1.4.5",
     "require": {
-        "php": "^7.2",
+        "php": "^7.4 || ^8.0",
         "sylius/sylius": "~1.3",
         "bitbag/shipping-export-plugin": "^1.2",
         "sylfrid/sylius-pickup-plugin": "1.4.3"
